--- a/.github/workflows/sonar-pr.yml
+++ b/.github/workflows/sonar-pr.yml
@@ -9,4 +9,5 @@ on:
 jobs:
   pr:
     uses: onecx/ci-quarkus/.github/workflows/quarkus-pr-sonar.yml@v1
-    secrets: inherit
+    secrets:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}    
