--- a/.github/workflows/sonar-pr.yml
+++ b/.github/workflows/sonar-pr.yml
@@ -10,4 +10,4 @@ jobs:
   pr:
     uses: onecx/ci-quarkus/.github/workflows/quarkus-pr-sonar.yml@v1
     secrets:
-      SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}    
+      sonar-token: ${{ secrets.SONAR_TOKEN }}
