--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,21 @@ on:
       - '.all-contributorsrc'
 
 jobs:
-  build:
-    uses: onecx/ci-quarkus/.github/workflows/build.yml@v1
+  codeql:
+    uses: onecx-apps/ci-quarkus/.github/workflows/quarkus-codeql.yml@v1
     secrets: inherit
+  quarkus:
+    uses: onecx-apps/ci-quarkus/.github/workflows/quarkus-build.yml@v1
+    secrets: inherit
+    with:
+      push: true
+  sonar:
+    uses: onecx-apps/ci-quarkus/.github/workflows/quarkus-sonar.yml@v1
+    needs: quarkus
+    secrets: inherit
+  helm:
+    uses: onecx-apps/ci-common/.github/workflows/helm-build.yml@v1
+    needs: quarkus
+    secrets: inherit
+    with:
+      push: true
