--- a/.github/workflows/sonar-pr.yml
+++ b/.github/workflows/sonar-pr.yml
@@ -8,6 +8,5 @@ on:
 
 jobs:
   pr:
-    uses: onecx/ci-quarkus/.github/workflows/quarkus-pr-sonar.yml@v1
-    secrets:
-      SONAR_TOKEN: "${{ secrets.SONAR_TOKEN }}"
+    uses: onecx-apps/ci-quarkus/.github/workflows/quarkus-pr-sonar.yml@v1
+    secrets: inherit
