--- a/.github/workflows/build-pr.yml
+++ b/.github/workflows/build-pr.yml
@@ -13,7 +13,7 @@ jobs:
   quarkus:
     uses: onecx-apps/ci-quarkus/.github/workflows/quarkus-build.yml@v1
     secrets: inherit
-  helm:
-    uses: onecx-apps/ci-common/.github/workflows/helm-build.yml@v1
-    needs: quarkus
-    secrets: inherit
+  # helm:
+  #   uses: onecx-apps/ci-common/.github/workflows/helm-build.yml@v1
+  #   needs: quarkus
+  #   secrets: inherit
