--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -4,14 +4,6 @@ on:
     tags:
       - '**'
 jobs:
-  docker:
-    uses: onecx-apps/ci-common/.github/workflows/docker-release.yml@v1
-    secrets: inherit
-  helm:
-    uses: onecx-apps/ci-common/.github/workflows/helm-release.yml@v1
-    needs: docker
-    secrets: inherit
-  changelog:
-    uses: onecx-apps/ci-common/.github/workflows/generate-changelog.yml@v1
-    needs: helm
+  release:
+    uses: onecx-apps/ci-quarkus/.github/workflows/build-release.yml@v1
     secrets: inherit
