--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,7 @@
 name: Build
 
 on:
+  workflow_dispatch:
   push:
     branches:
       - 'main'
@@ -15,21 +16,6 @@ on:
       - '.all-contributorsrc'
 
 jobs:
-  codeql:
-    uses: onecx-apps/ci-quarkus/.github/workflows/quarkus-codeql.yml@v1
+  build:
+    uses: onecx-apps/ci-quarkus/.github/workflows/build.yml@v1
     secrets: inherit
-  quarkus:
-    uses: onecx-apps/ci-quarkus/.github/workflows/quarkus-build.yml@v1
-    secrets: inherit
-    with:
-      push: true
-  sonar:
-    uses: onecx-apps/ci-quarkus/.github/workflows/quarkus-sonar.yml@v1
-    needs: quarkus
-    secrets: inherit
-  helm:
-    uses: onecx-apps/ci-common/.github/workflows/helm-build.yml@v1
-    needs: quarkus
-    secrets: inherit
-    with:
-      push: true
